fixed center alignment

--- a/src/Components/GameBoard.css
+++ b/src/Components/GameBoard.css
@@ -1,7 +1,7 @@
 .board {
   display: grid;
   grid-template-columns: auto auto auto;
-  width: 10%;
+ 
 }
 
 .win {
