--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,14 @@
-.main {
-  margin: 30px;
-}
 
 .heading {
   color: white;
   background-color: black;
-  width: 40%;
-  max-width: 200px;
-  padding: 10px;
   text-align: center;
-  position: relative;
-  left: 70px;
   border-radius: 5%;
+  font-size:2.0rem;
+  font-weight:bold;
+  font-style:italic;
+  padding:15px;
+  margin:40px 0 40px;
+ 
+  
 }
